--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile files('libs/androidplot-core-0.6.2-SNAPSHOT.jar')
+    compile files('libs/mpandroidchartlibrary-2-1-2.jar')
 }
